# theDeamerProject

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md  installer.py
Deamer/: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Deamer  DeamerTest.cpp  FileBuildertest.cpp  FileBuildertest.out  Makefile  README.md  parserCorrect.y  testFileMacro.h
Deamer/.deamer/dldl/arguments/: definition.deamer  full.deamer  lpd.deamer  miccel.deamer
Deamer/Definition/LPD/Argument/: LPDDef.dldl
Deamer/Definition/LPD/Associativity/: LPDDef.dldl
Deamer/Definition/LPD/AstOptimization/: LPDDef.dldl
Deamer/Definition/LPD/AstTranslation/: LPDDef.dldl
Deamer/Definition/LPD/Colorization/: LPDDef.dldl
Deamer/Definition/LPD/Comment/: LPDDef.dldl
Deamer/Definition/LPD/Documentation/: LPDDef.dldl
Deamer/Definition/LPD/Formatting/: LPDDef.dldl
Deamer/Definition/LPD/Generation/: LPDDef.dldl
Deamer/Definition/LPD/Grammar/: LPDDef.dldl
Deamer/Definition/LPD/Identitiy/: LPDDef.dldl
Deamer/Definition/LPD/Import/: LPDDef.dldl
Deamer/Definition/LPD/Lexicon/: LPDDef.dldl
Deamer/Definition/LPD/OOPSyntax/: LPDDEF.dldl
Deamer/Definition/LPD/Precedence/: LPDDef.dldl
Deamer/Definition/LPD/Semantic/: LPDDef.dldl
Deamer/Definition/LPD/Threat/: LPDDef.dldl
Deamer/Definition/LPD/Value/: LPDDef.dldl
Deamer/Doc/: README.md
Deamer/cmake/: DeamerConfig.cmake.in
Deamer/docs/: CMakeLists.txt  Mainpage.md  PropertyDefinition.md
Deamer/examples/: AstNodeX.cpp  AstNodeX.h  CMakeLists.txt  README.md
Deamer/examples/DLDL/: CMakeLists.txt  main.cpp
Deamer/examples/DLDL/Definition/: CompilerGenerator.h  Generation.h  Identity.h  Language.h
Deamer/examples/DST/: BNF.md  CMakeLists.txt  README.md  main.cpp
Deamer/examples/DST/Definition/: CompilerGenerator.h  Generation.h  Identity.h  Language.h
Deamer/examples/SimpleLang/: CMakeLists.txt  README.md  SimpleLang.dldl  SimpleLangGenerator.cpp
Deamer/examples/SimpleLang2/: CMakeLists.txt  main.cpp
Deamer/examples/SimpleLang2/Definition/: Associativity.h  CompilerGenerator.h  Generation.h  Grammar.cpp  Grammar.h  Identity.h  Language.h  Lexicon.h  Precedence.h
Deamer/include/Deamer/: Deamer.h
Deamer/include/Deamer/AstGen/: AstBuilder.h  AstBuilderFactory.h  AstContext.h  AstEnumHeaderSectionFormatter.h  AstFileFormatter.h  AstGen.h  AstGlobalHeaderFormatter.h  AstInformation.h  AstNode.h  AstNodeFormatter.h  AstTree.h  AstVisitor.h
Deamer/include/Deamer/Compiler/: Compiler.h
Deamer/include/Deamer/CompilerGen/: CompiledObject.h  CompilerGenConstants.h
Deamer/include/Deamer/DefaultAPI/: DeamerCompilerAPI.h  DeamerLexerAPI.h  DeamerParserAPI.h
Deamer/include/Deamer/FileBuilder/: Directory.h  File.h  FileBuilder.h  FileSection.h  FileVariable.h  FileVariableType.h
Deamer/include/Deamer/FileProcessor/: FileReadProcessor.h  FileRead_Passes.h
Deamer/include/Deamer/Language/: Language.h
Deamer/include/Deamer/LanguageAnalyzer/: LanguageAnalyzer.h  LanguageDefinitionAnalyzer.h  LanguageDefinitionPrinter.h  LanguageOptimiser.h
Deamer/include/Deamer/LanguageGen/: LanguageDefMacros.h  LanguageDefinition.h  LanguageDefinitionBuilder.h  LanguageGen.h  LanguageGenConstants.h  Node.h  Rule.h  RuleFactory.h  Token.h  TokenConstants.h  TokenFactory.h  TokenPermissionBuilder.h  TokenTypeBuilder.h  Type.h  UngroupableRuleExeption.h
Deamer/include/Deamer/LexerGen/: DlexBuilder.h  FlexBuilder.h  LexerBuilder.h  LexerFactory.h  LexerGen.h
Deamer/include/Deamer/ParserGen/: BisonBuilder.h  DParseBuilder.h  ParserBuilder.h  ParserFactory.h  ParserGen.h
Deamer/include/Deamer/StringBuilder/: StringBuilder.h
Deamer/include/Deamer/ThreatAnalyzer/: ThreatAnalyzer.h  ThreatType.h
Deamer/include/Deamer/Types/: BitwiseEnum.h  Builder.h  Generator.h  Visitable.h  Visitor.h
Deamer/lib/: CMakeLists.txt  Deamer.cpp
Deamer/lib/AstGen/: AstBuilder.c  AstBuilder.cpp  AstBuilderFactory.cpp  AstContext.cpp  AstEnumHeaderSectionFormatter.cpp  AstFileFormatter.cpp  AstGen.c  AstGen.cpp  AstGlobalHeaderFormatter.cpp  AstInformation.cpp  AstNode.cpp  AstNodeFormatter.cpp  AstTree.cpp  AstVisitor.cpp
Deamer/lib/AstGen/AstFormatter/: AstFileFormatter.cpp  AstFileFormatterFactory.cpp  AstNodeHeaderFormatter.cpp  AstNodeSourceFormatter.cpp  AstTreeHeaderFormatter.cpp  AstTreeSourceFormatter.cpp
Deamer/lib/AstGen/AstNodeInterpreterBasedBuilder/: AstBuilder.cpp  AstBuilderInterpreterBased.cpp  AstNodeSectionFormatter.cpp
Deamer/lib/AstGen/AstNodeVisitorBasedBuilder/: AstBuilderVisitorBased.cpp  AstNodeSectionFormatter.cpp
Deamer/lib/CompilerGen/: CompiledObject.cpp
Deamer/lib/DefaultAPI/: DeamerCompilerAPI.cpp  DeamerLexerAPI.cpp  DeamerParserAPI.cpp
Deamer/lib/File/Compiler/: Output.cpp
Deamer/lib/File/Generate/: Compiler.cpp
Deamer/lib/File/Tool/: Action.cpp  CMakeLists.cpp  Data.cpp  Directory.cpp  File.cpp  LoadFilesystem.cpp  Output.cpp
Deamer/lib/FileBuilder/: Directory.cpp  File.cpp  FileBuilder.cpp  FileSection.cpp
Deamer/lib/FileBuilder/HFileBuilder/: HFClassBuilder.cpp  HfileBuilder.cpp
Deamer/lib/FileBuilder/Types/: FileClassSection.cpp  FileFunctionPrototypeSection.cpp  (+7 more)
Deamer/lib/FileProcessor/: FileReadProcessor.cpp
Deamer/lib/LanguageAnalyzer/: LanguageAnalyzer.cpp  LanguageDefinitionAnalyzer.cpp  LanguageDefinitionPrinter.cpp  LanguageOptimiser.cpp
Deamer/lib/LanguageGen/: LanguageDefinition.cpp  LanguageDefinitionBuilder.cpp  LanguageGen.cpp  Node.cpp  Rule.cpp  RuleFactory.cpp  Token.cpp  TokenFactory.cpp  TokenPermissionBuilder.cpp  TokenTypeBuilder.cpp  Type.cpp  UngroupableRuleException.cpp
Deamer/lib/LexerGen/: DlexBuilder.cpp  FlexBuilder.cpp  LexerBuilder.cpp  LexerFactory.cpp  LexerGen.cpp
Deamer/lib/ParserGen/: BisonBuilder.cpp  DParseBuilder.cpp  ParserBuilder.cpp  ParserFactory.cpp  ParserGen.cpp
Deamer/lib/StringBuilder/: StringBuilder.cpp
Deamer/lib/ThreatAnalyzer/: ThreatAnalyzer.cpp
Deamer/lib/Types/: BitwiseEnum.cpp  Builder.cpp  Generator.cpp
Deamer/tests/: CMakeLists.txt  README.md  test1.cpp  test2.cpp
Deamer/tests/Types/: BitwiseEnum.cpp
(+913 files in other folders)
